// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseRPCParams 1`] = `
Object {
  "address": "0xA2Eaa7BAe79F0F9FfB23667cdAc9CE285b30aE0E",
}
`;

exports[`parseRPCParams 2`] = `
Object {
  "address": "0xA2Eaa7BAe79F0F9FfB23667cdAc9CE285b30aE0E",
  "message": "My email is john@doe.com - 1683582604485",
}
`;

exports[`parseRPCParams 3`] = `
Object {
  "address": "0xA2Eaa7BAe79F0F9FfB23667cdAc9CE285b30aE0E",
  "message": "My email is john@doe.com - 1683582643859",
}
`;

exports[`parseRPCParams 4`] = `
Object {
  "address": "0xA2Eaa7BAe79F0F9FfB23667cdAc9CE285b30aE0E",
  "message": Object {
    "domain": Object {
      "chainId": 1,
      "name": "Ether Mail",
      "verifyingContract": "0xCcCCccccCCCCcCCCCCCcCcCccCcCCCcCcccccccC",
      "version": "1",
    },
    "message": Object {
      "contents": "Hello, Bob!",
      "from": Object {
        "name": "Cow",
        "wallet": "0xCD2a3d9F938E13CD947Ec05AbC7FE734Df8DD826",
      },
      "to": Object {
        "name": "Bob",
        "wallet": "0xbBbBBBBbbBBBbbbBbbBbbbbBBbBbbbbBbBbbBBbB",
      },
    },
    "primaryType": "Mail",
    "types": Object {
      "EIP712Domain": Array [
        Object {
          "name": "name",
          "type": "string",
        },
        Object {
          "name": "version",
          "type": "string",
        },
        Object {
          "name": "chainId",
          "type": "uint256",
        },
        Object {
          "name": "verifyingContract",
          "type": "address",
        },
      ],
      "Mail": Array [
        Object {
          "name": "from",
          "type": "Person",
        },
        Object {
          "name": "to",
          "type": "Person",
        },
        Object {
          "name": "contents",
          "type": "string",
        },
      ],
      "Person": Array [
        Object {
          "name": "name",
          "type": "string",
        },
        Object {
          "name": "wallet",
          "type": "address",
        },
      ],
    },
  },
}
`;
